--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
+# Node modules
 /node_modules
+
+# Environment variables
 .env
+.env.local
+.env.development
+.env.production
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+/dist
+/build
+
+# Static uploads (optional depending on project)
+uploads/
